--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,9 @@
     <string name="close">Close</string>
     <string name="open">Open</string>
     <string name="hint_search_location">Search location</string>
+    <string name="title_my_booking">My Booking</string>
+    <string name="title_my_account">My Account</string>
+    <string name="title_settings">Settings</string>
+    <string name="title_help">Help</string>
+    <string name="title_about">About</string>
 </resources>
