--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
     <string name="title_settings">Settings</string>
     <string name="title_help">Help</string>
     <string name="title_about">About</string>
+    <string name="title_filter">Filter</string>
+    <string name="title_sort">Sort</string>
+    <string name="title_map">Map</string>
+    <string name="title_list">List</string>
+    <string name="action_show_more">Show more</string>
+    <string name="title_overview">Overview</string>
 </resources>
