--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="title_list">List</string>
     <string name="action_show_more">Show more</string>
     <string name="title_overview">Overview</string>
+    <string name="action_more">More</string>
 </resources>
